--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -12,6 +12,9 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      pages_enabled: ${{ steps.pages_probe.outputs.enabled }}
+      pages_link: ${{ steps.pages_probe.outputs.page_link }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,24 +34,52 @@ jobs:
       - name: Build static site
         run: python scripts/build_site.py
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: site
 
+      - name: Probe repository Pages status
+        id: pages_probe
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+          REPOSITORY: ${{ github.repository }}
+        run: |
+          set -euo pipefail
+          response_file="pages_status.json"
+          status_code="$(curl -sS -o "${response_file}" -w "%{http_code}" \
+            -H "Authorization: Bearer ${GITHUB_TOKEN}" \
+            -H "Accept: application/vnd.github+json" \
+            "https://api.github.com/repos/${REPOSITORY}/pages")"
+
+          if [ "${status_code}" = "200" ]; then
+            page_link="$(python -c 'import json; print(json.load(open("pages_status.json", "r", encoding="utf-8")).get("html_url", ""))')"
+            echo "enabled=true" >> "$GITHUB_OUTPUT"
+            echo "page_link=${page_link}" >> "$GITHUB_OUTPUT"
+          else
+            echo "enabled=false" >> "$GITHUB_OUTPUT"
+            echo "page_link=" >> "$GITHUB_OUTPUT"
+          fi
+
       - name: Write build summary
+        env:
+          PAGES_ENABLED: ${{ steps.pages_probe.outputs.enabled }}
+          PAGES_LINK: ${{ steps.pages_probe.outputs.page_link }}
+          SETTINGS_LINK: ${{ github.server_url }}/${{ github.repository }}/settings/pages
         run: |
           echo "### Pages Build" >> "$GITHUB_STEP_SUMMARY"
           echo "" >> "$GITHUB_STEP_SUMMARY"
           echo "- ✅ Build site success" >> "$GITHUB_STEP_SUMMARY"
           echo "- 🔗 Preview artifact: [Open run artifacts](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> "$GITHUB_STEP_SUMMARY"
-          echo "- 🌐 Pages URL: pending deploy job" >> "$GITHUB_STEP_SUMMARY"
+          if [ "${PAGES_ENABLED}" = "true" ]; then
+            echo "- 🌐 Pages URL: [${PAGES_LINK}](${PAGES_LINK}) (pending deploy job refresh)" >> "$GITHUB_STEP_SUMMARY"
+          else
+            echo "- 🌐 Pages URL: not available yet. Enable GitHub Pages first: [Settings > Pages](${SETTINGS_LINK})" >> "$GITHUB_STEP_SUMMARY"
+          fi
 
   deploy:
     needs: build
+    if: needs.build.outputs.pages_enabled == 'true'
     runs-on: ubuntu-latest
     permissions:
       pages: write
@@ -71,3 +102,15 @@ jobs:
           else
             echo "- 🌐 Pages URL: pending (no page_url output returned)" >> "$GITHUB_STEP_SUMMARY"
           fi
+
+  deploy_skipped:
+    needs: build
+    if: needs.build.outputs.pages_enabled != 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Explain why deploy is skipped
+        run: |
+          echo "### GitHub Pages Deployment" >> "$GITHUB_STEP_SUMMARY"
+          echo "" >> "$GITHUB_STEP_SUMMARY"
+          echo "- ⚠️ Deploy skipped because GitHub Pages is not enabled for this repository." >> "$GITHUB_STEP_SUMMARY"
+          echo "- 👉 Enable it here: [Settings > Pages](${{ github.server_url }}/${{ github.repository }}/settings/pages)" >> "$GITHUB_STEP_SUMMARY"
